dinoco_docs/src/content/v0.0.1/en-us/orm/update-many.mdx
export const title = "update_many";

# update_many

Used to update multiple records at once.

---

## What you can do

- `.cond(...)`: restricts which records can be updated.
- `.values(Vec\<M\>)`: defines the items used in the batch update.
- `.returning::\<T\>()`: returns the updated records as a typed list.
- `.execute(&client)`: executes the batch update.

## Return

Without `.returning::\<T\>()`, the return is:

```rust
DinocoResult<()>
```

With `.returning::\<T\>()`, the return becomes:

```rust
DinocoResult<Vec<T>>
```

## Basic example

```rust
dinoco::update_many::<User>()
    .values(vec![
        User { id: 1, email: "a@acme.com".into(), name: "Ana".into() },
        User { id: 2, email: "b@acme.com".into(), name: "Bia".into() },
    ])
    .execute(&client)
    .await?;
```

## Example with return

```rust
let updated = dinoco::update_many::<User>()
    .values(vec![
        User { id: 2, name: "Ana Batch".to_string() },
        User { id: 3, name: "Caio Batch".to_string() },
    ])
    .returning::<User>()
    .execute(&client)
    .await?;
```

## Example with filter

```rust
dinoco::update_many::<User>()
    .cond(|x| x.active.eq(true))
    .values(vec![
        User { id: 10, email: "a@acme.com".into(), name: "Ana".into() },
        User { id: 11, email: "b@acme.com".into(), name: "Bia".into() },
    ])
    .execute(&client)
    .await?;
```

## Next steps

- [**`update::\<M\>()`**](/v0.0.1/orm/update): traditional update with condition.
- [**`find_and_update::\<M\>()`**](/v0.0.1/orm/find-and-update): atomic update on a single record.
